<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.ImaginaryNumb3r</groupId>
    <artifactId>new-balance-era</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <name>${project.groupId}:${project.artifactId}:${project.version}</name> <!--
    <url>https://github.com/ImaginaryNumb3r/Hephaestus</url> -->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>
    </properties>
    
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>http://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories> <!--
    
    <distributionManagement>
        <snapshotRepository>
            <id>github.com</id>
            <name>my snapshot repository</name>
            <url>file:///path/to/snapshot/repo</url>
        </snapshotRepository>
    </distributionManagement> -->
    
    <dependencies>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>15.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.ImaginaryNumb3r</groupId>
            <artifactId>Hephaestus-essentials</artifactId>
            <version>86e16885c2</version>
        </dependency>
        <dependency>
            <groupId>com.github.ImaginaryNumb3r</groupId>
            <artifactId>Hephaestus-experimental</artifactId>
            <version>d1400dcd4f</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.6</version>
            <scope>provided</scope>
        </dependency>
    
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.6</version>
        </dependency>
    </dependencies>

    <build>
        <directory>Code/target</directory>
        <outputDirectory>Code/target/classes</outputDirectory>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <testOutputDirectory>target/test-classes</testOutputDirectory>
        <sourceDirectory>src</sourceDirectory>
        <resources>
            <resource>
                <directory>Code/resources</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>test/resources</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5</version>
                <configuration>
                    <source>12</source>
                    <target>12</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://https://github.com/ImaginaryNumb3r/Hephaestus.git</connection>
        <developerConnection>scm:git:ssh:///github.com/ImaginaryNumb3r/Hephaestus..git</developerConnection>
        <url>https://github.com/ImaginaryNumb3r/Hephaestus</url>
    </scm>


    <developers>
        <developer>
            <name>Patrick Plieschnegger</name>
            <email>patrick.plieschnegger@gmail.com</email>
            <organization>ImaginaryNumb3r</organization>
            <organizationUrl>http://www.none.com</organizationUrl>
        </developer>
    </developers>

</project>
